--- a/hw-template.tex
+++ b/hw-template.tex
@@ -51,7 +51,7 @@
 \def\d{\delta}
 \def\a{\alpha}
 \def\t{\tau}
-\def\l{\lambda}
+%\def\l{\lambda}
 \def\L{\Lambda}
 \def\A{\mathcal{A}}
 \def\B{\mathcal{B}}
@@ -76,6 +76,10 @@
 \def\append{\textsf{append}}
 \def\Tot{\textit{Tot}}
 \def\Con{\textit{Con}}
+
+\def\midd{~\big\vert~}
+\def\l{\left(}
+\def\r{\right)}
 
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}%
 \DeclarePairedDelimiter\norm{\lVert}{\rVert}%
@@ -206,7 +210,5 @@ Signature: & \hrulefill \\
 \begin{homeworkProblem} %5
 	(<>)
 \end{homeworkProblem}
-
-\pagebreak
 
 \end{document}
